--- a/style2.css
+++ b/style2.css
@@ -111,3 +111,35 @@ nav ul li a:hover {
   font-size: 18px;
   font-weight: 300;
 }
+
+main {
+  margin-right: 30%;
+  margin-left: 30%;
+  margin-top: 3%;
+}
+
+h1 {
+  text-align: left;
+  justify-content: center;
+  border-bottom: 1px solid black;
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 40px;
+  color: #001373;
+}
+
+h3 {
+  font-size: 25px;
+  font-weight: 700;
+}
+
+p {
+  font-size: 18px;
+  line-height: 1.3;
+  font-weight: 500;
+}
+
+.banner img {
+  width: 100%;
+  margin-bottom: 25px;
+}
